<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_alta" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:text="@string/alta"/>
    <Button
            android:text="@string/consulta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_consulta" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/b_alta" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_registro" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/b_consulta" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/resumen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_resumen" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/b_registro" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>